# geneintelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_NK_classification.py
src/geneintelligence/: __init__.py  api.py  configs.py  datasets.py  embeddings.py  finetuners.py  models.py
