[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneintelligence"
version = "0.1.0"
authors = [
    { name = "Filippo Beleggia", email = "filippo.beleggia@uk-koeln.de" },
]
description = "AI tools for the analysis of biological data"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "numpy",
    "pandas",
    "scipy",
    "lmdb",
    "lz4",
    "tensorboard",
    "tqdm",
    "tables",
    "psutil",
]