[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneintelligence"
version = "0.1.0"
authors = [
    { name = "Filippo Beleggia", email = "filippo.beleggia@uk-koeln.de" },
]
description = "AI tools for the analysis of biological data"
readme = "README.md" 
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "numpy",
    "pandas",
    "scipy",
    "lmdb",
    "lz4",
    "tensorboard",
    "tqdm",
    "tables",
    "psutil",
    "anndata",
    "torchmetrics",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/beleggia-lab/geneintelligence"
"Bug Tracker" = "https://github.com/beleggia-lab/geneintelligence/issues"

# --- ADD THIS SECTION ---
[tool.setuptools.packages.find]
where = ["src"]