[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneintelligence"
dynamic = ["version"]
authors = [
    { name = "Filippo Beleggia", email = "filippo.beleggia@uk-koeln.de" },
]
description = "AI foundation models and tools for the analysis of biological data"
readme = "README.md" 
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["bioinformatics", "single-cell", "rna-seq", "deep-learning", "transformer", "foundation-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.7.1",
    "flash-attn",
    "numpy",
    "pandas",
    "scipy",
    "lmdb",
    "lz4",
    "anndata",
    "torchmetrics",
    "pyyaml", 
]

[project.urls]
"Homepage" = "https://github.com/beleggia-lab/geneintelligence"
"Bug Tracker" = "https://github.com/beleggia-lab/geneintelligence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
